--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
+
+html, body {
+  width: 600px;
+  height: 1024px;
+  background-color: black;
+}
